lib/cwren.pas


  { Reads a byte array from [slot]. }
  { }
  { The memory for the returned string is owned by Wren. You can inspect it }
  { while in your foreign method, but cannot keep a pointer to it after the }
  { function returns, since the garbage collector may reclaim it. }
  { }
  { Returns a pointer to the first byte of the array and fill [length] with the }
  { number of bytes in the array. }
  { }
  { It is an error to call this if the slot does not contain a string. }
(* Const before type ignored *)
  function wrenGetSlotBytes(vm:PWrenVM; slot:longint; length:Plongint) : PChar; cdecl; external cDllName;

  { Reads a number from [slot]. }
  { }
  { It is an error to call this if the slot does not contain a number. }
  function wrenGetSlotDouble(vm:PWrenVM; slot:longint):double; cdecl; external cDllName; 

  { Reads a foreign object from [slot] and returns a pointer to the foreign data }
  { stored with it. }
  { }
  { It is an error to call this if the slot does not contain an instance of a }
  { foreign class. }
  function wrenGetSlotForeign(vm:PWrenVM; slot:longint):pointer; cdecl; external cDllName; 

  { Reads a string from [slot]. }
  { }
  { The memory for the returned string is owned by Wren. You can inspect it }
  { while in your foreign method, but cannot keep a pointer to it after the }
  { function returns, since the garbage collector may reclaim it. }
  { }
  { It is an error to call this if the slot does not contain a string. }
(* Const before type ignored *)
  function wrenGetSlotString(vm:PWrenVM; slot:longint):PChar; cdecl; external cDllName;

  { Creates a handle for the value stored in [slot]. }
  { }
  { This will prevent the object that is referred to from being garbage collected }
  { until the handle is released by calling [wrenReleaseHandle()]. }
  function wrenGetSlotHandle(vm:PWrenVM; slot:longint):PWrenHandle; cdecl; external cDllName;

  { Stores the boolean [value] in [slot]. }
  procedure wrenSetSlotBool(vm:PWrenVM; slot:longint; value:Boolean); cdecl; external cDllName;

  { Stores the array [length] of [bytes] in [slot]. }
  { }
  { The bytes are copied to a new string within Wren's heap, so you can free }
  { memory used by them after this is called. }
(* Const before type ignored *)
  procedure wrenSetSlotBytes(vm:PWrenVM; slot:longint; bytes:Pchar; length:size_t); cdecl; external cDllName; 

  { Stores the numeric [value] in [slot]. }
  procedure wrenSetSlotDouble(vm:PWrenVM; slot:longint; value:double); cdecl; external cDllName; 

  { Creates a new instance of the foreign class stored in [classSlot] with [size] }
  { bytes of raw storage and places the resulting object in [slot]. }
  { }
  { This does not invoke the foreign class's constructor on the new instance. If }
  { you need that to happen, call the constructor from Wren, which will then }
  { call the allocator foreign method. In there, call this to create the object }
  { and then the constructor will be invoked when the allocator returns. }
  { }
  { Returns a pointer to the foreign object's data. }
  function wrenSetSlotNewForeign(vm:PWrenVM; slot:longint; classSlot:longint; size:size_t):pointer; cdecl; external cDllName; 

  { Stores a new empty list in [slot]. }
  procedure wrenSetSlotNewList(vm:PWrenVM; slot:longint); cdecl; external cDllName; 

  { Stores a new empty map in [slot]. }
  procedure wrenSetSlotNewMap(vm:PWrenVM; slot:longint); cdecl; external cDllName; 

  { Stores null in [slot]. }
  procedure wrenSetSlotNull(vm:PWrenVM; slot:longint); cdecl; external cDllName; 

  { Stores the string [text] in [slot]. }
  { }
  { The [text] is copied to a new string within Wren's heap, so you can free }
  { memory used by it after this is called. The length is calculated using }
  { [strlen()]. If the string may contain any null bytes in the middle, then you }
  { should use [wrenSetSlotBytes()] instead. }
(* Const before type ignored *)
  procedure wrenSetSlotString(vm:PWrenVM; slot:longint; text:Pchar); cdecl; external cDllName; 

  { Stores the value captured in [handle] in [slot]. }
  { }
  { This does not release the handle for the value. }
  procedure wrenSetSlotHandle(vm:PWrenVM; slot:longint; handle:PWrenHandle); cdecl; external cDllName; 

  { Returns the number of elements in the list stored in [slot]. }
  function wrenGetListCount(vm:PWrenVM; slot:longint):longint; cdecl; external cDllName; 

  { Reads element [index] from the list in [listSlot] and stores it in }
  { [elementSlot]. }
  procedure wrenGetListElement(vm:PWrenVM; listSlot:longint; index:longint; elementSlot:longint); cdecl; external cDllName; 

  { Sets the value stored at [index] in the list at [listSlot],  }
  { to the value from [elementSlot].  }
  procedure wrenSetListElement(vm:PWrenVM; listSlot:longint; index:longint; elementSlot:longint); cdecl; external cDllName; 

  { Takes the value stored at [elementSlot] and inserts it into the list stored }
  { at [listSlot] at [index]. }
  { }
  { As in Wren, negative indexes can be used to insert from the end. To append }
  { an element, use `-1` for the index. }
  procedure wrenInsertInList(vm:PWrenVM; listSlot:longint; index:longint; elementSlot:longint); cdecl; external cDllName; 

  { Returns the number of entries in the map stored in [slot]. }
  function wrenGetMapCount(vm:PWrenVM; slot:longint):longint; cdecl; external cDllName; 

  { Returns true if the key in [keySlot] is found in the map placed in [mapSlot]. }
  function wrenGetMapContainsKey(vm:PWrenVM; mapSlot:longint; keySlot:longint):Boolean; cdecl; external cDllName;

  { Retrieves a value with the key in [keySlot] from the map in [mapSlot] and }
  { stores it in [valueSlot]. }
  procedure wrenGetMapValue(vm:PWrenVM; mapSlot:longint; keySlot:longint; valueSlot:longint); cdecl; external cDllName; 

  { Takes the value stored at [valueSlot] and inserts it into the map stored }
  { at [mapSlot] with key [keySlot]. }
  procedure wrenSetMapValue(vm:PWrenVM; mapSlot:longint; keySlot:longint; valueSlot:longint); cdecl; external cDllName; 

  { Removes a value from the map in [mapSlot], with the key from [keySlot], }
  { and place it in [removedValueSlot]. If not found, [removedValueSlot] is }
  { set to null, the same behaviour as the Wren Map API. }
  procedure wrenRemoveMapValue(vm:PWrenVM; mapSlot:longint; keySlot:longint; removedValueSlot:longint); cdecl; external cDllName; 

  { Looks up the top level variable with [name] in resolved [module] and stores }
  { it in [slot]. }
(* Const before type ignored *)
(* Const before type ignored *)
  procedure wrenGetVariable(vm:PWrenVM; module:Pchar; name:Pchar; slot:longint); cdecl; external cDllName; 

  { Looks up the top level variable with [name] in resolved [module],  }
  { returns false if not found. The module must be imported at the time,  }
  { use wrenHasModule to ensure that before calling. }
(* Const before type ignored *)
(* Const before type ignored *)
  function wrenHasVariable(vm:PWrenVM; module:Pchar; name:Pchar):Boolean; cdecl; external cDllName;

  { Returns true if [module] has been imported/resolved before, false if not. }
(* Const before type ignored *)
  function wrenHasModule(vm:PWrenVM; module:Pchar):Boolean; cdecl; external cDllName;

  { Sets the current fiber to be aborted, and uses the value in [slot] as the }
  { runtime error object. }
  procedure wrenAbortFiber(vm:PWrenVM; slot:longint); cdecl; external cDllName; 

  { Returns the user data associated with the WrenVM. }
  function wrenGetUserData(vm:PWrenVM):pointer; cdecl; external cDllName; 

  { Sets user data associated with the WrenVM. }
  procedure wrenSetUserData(vm:PWrenVM; userData:pointer); cdecl; external cDllName; 


implementation


end.
